Compile fix and test updates